--- a/index.html
+++ b/index.html
@@ -107,6 +107,207 @@
             <a href="#" class="btn">read more</a>
         </div>
     </section>
+    <!-- services end -->
+    <!-- steps section starts -->
+    <section class="steps">
+
+        <div class="heading">
+            <span>how to get started</span>
+            <h1>with 3 simple steps</h1>
+        </div>
+
+        <div class="box-container">
+
+                <div class="box">
+                <img src="images/step-1.svg" alt="">
+                <h3>join us</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, labore.</p>
+                <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="box">
+                    <img src="images/step-2.svg" alt="">
+                    <h3>cutomize design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, labore.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="box">
+                    <img src="images/step-3.svg" alt="">
+                    <h3>earn money</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, labore.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+        </div>
+
+
+    </section>
+    <!-- steps section end -->
+    <!-- features start -->
+    <section class="features" id="features">
+
+        <div class="heading">
+            <span>our features</span>
+            <h1>what makes us different?</h1>
+        </div>
+
+        <div class="box-container">
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/feature-1.svg" alt="">
+                </div>
+                <div class="content">
+                    <h3>easy to get <span class="line-down">started!</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ipsam!</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/feature-2.svg" alt="">
+                </div>
+                <div class="content">
+                    <h3>unique and  <span class="line-down">creative</span>designs</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ipsam!</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/feature-3.svg" alt="">
+                </div>
+                <div class="content">
+                    <h3>experienced<span class="line-down">team</span>members</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae provident fugiat sed doloremque minima ipsa delectus ipsum rem nesciunt, dolore nihil veritatis nemo beatae repellendus, explicabo repellat et nulla quia.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/feature-4.svg" alt="">
+                </div>
+                <div class="content">
+                    <h3>fully <span class="line-down">dynamic</span>and Responsive</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae provident fugiat sed doloremque minima ipsa delectus ipsum rem nesciunt, dolore nihil veritatis nemo beatae repellendus, explicabo repellat et nulla quia.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- features end -->
+    <!-- pricing start -->
+    <section class="pricing" id="pricing">
+
+
+        <div class="heading">
+            <span>choose your plan</span>
+            <h1>we've got your covered</h1>
+        </div>
+
+        <div class="price-toggler">
+            <span class="month active">monthly</span>
+            <span class="year">yearly</span>
+        </div>
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>basic</h3>
+                <div class="price">
+                    <div class="month">free</div>
+                    <div class="year"><span>$</span>29.<span>99</span></div>                 
+                </div>
+                <div class="list">
+                    <p> <i class="fas fa-check"></i>1 person</p>
+                    <p> <i class="fas fa-check"></i>free hosting</p>
+                    <p> <i class="fas fa-check"></i>2 projects</p>
+                    <p> <i class="fas fa-check"></i>maintenance</p>
+                    <p> <i class="fas fa-check"></i>24/7 support</p>
+                </div>
+                <a href="#" class="btn">choose plan</a>
+            </div>
+
+            <div class="box">
+                <h3>regular</h3>
+                <div class="price">
+                    <div class="month"><span>$</span>29.<span>99</span></div>
+                    <div class="year"><span>$</span>59.<span>99</span></div>
+                    <div class="list">
+                        <p> <i class="fas fa-check"></i>10 person</p>
+                        <p> <i class="fas fa-check"></i>free hosting</p>
+                        <p> <i class="fas fa-check"></i>20 projects</p>
+                        <p> <i class="fas fa-check"></i>maintenance</p>
+                        <p> <i class="fas fa-check"></i>24/7 support</p>
+                    </div>
+                    <a href="#" class="btn">choose plan</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <h3>regular</h3>
+                <div class="price">
+                    <div class="month"><span>$</span>59.<span>99</span></div>
+                    <div class="year"><span>$</span>89.<span>99</span></div>
+                    <div class="list">
+                        <p> <i class="fas fa-check"></i>100 person</p>
+                        <p> <i class="fas fa-check"></i>free hosting</p>
+                        <p> <i class="fas fa-check"></i>100 projects</p>
+                        <p> <i class="fas fa-check"></i>maintenance</p>
+                        <p> <i class="fas fa-check"></i>24/7 support</p>
+                    </div>
+                    <a href="#" class="btn">choose plan</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- reviews start -->
+    <section class="reviews" id="reviews">
+
+        <div class="heading">
+            <span>client's reviews</span>
+            <h1>what say about us?</h1>
+        </div>
+
+        <div class="slide-container">
+
+            <div class="slide">
+                <img src="images/pic-1.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vel blanditiis voluptate sed eveniet provident dignissimos. Nobis corrupti pariatur consequatur.</p>
+                <h3>xanxus</h3>
+                <span>designer</span>
+            </div>
+
+            <div class="slide">
+                <img src="images/pic-2.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vel blanditiis voluptate sed eveniet provident dignissimos. Nobis corrupti pariatur consequatur.</p>
+                <h3>xanxus</h3>
+                <span>designer</span>
+            </div>
+
+            <div class="slide">
+                <img src="images/pic-3.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vel blanditiis voluptate sed eveniet provident dignissimos. Nobis corrupti pariatur consequatur.</p>
+                <h3>xanxus</h3>
+                <span>designer</span>
+            </div>
+
+            <div class="slide">
+                <img src="images/pic-4.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vel blanditiis voluptate sed eveniet provident dignissimos. Nobis corrupti pariatur consequatur.</p>
+                <h3>xanxus</h3>
+                <span>designer</span>
+            </div>
+
+        </div>
+    </section>
 
     <script src="js/all.js"></script>
 </body>
